force-app/main/default/objects/Freight_Information__c/Freight_Information__c.object-meta.xml
<CustomObject>
    <label>Freight Information</label>
    <nameField>
        <label>Freight Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Freight Information</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>