force-app/main/default/objects/Freight_Information__c/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <label>Bill To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Shipper</fullName>
            </value>
            <value>
                <fullName>Receiver</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>