force-app/main/default/objects/Freight_Information__c/fields/Freight_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Freight_Contact_Email__c</fullName>
    <label>Freight Contact Email</label>
    <type>Email</type>
</CustomField>