force-app/main/default/objects/Freight_Information__c/fields/Freight_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Freight_Contact_Phone__c</fullName>
    <label>Freight Contact Phone</label>
    <type>Phone</type>
</CustomField>